# NvTriStrip

./: .gitignore  CMakeLists.txt  LICENSE  NvTriStrip.cpp  NvTriStrip.h  NvTriStripObjects.cpp  NvTriStripObjects.h  README.md  VertexCache.h
.github/workflows/: codacy.yml
